--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sparticuz/chromium": "^143.0.0",
     "axe-core": "^4.11.0",
     "next": "14.2.21",
+    "playwright-core": "^1.58.2",
     "puppeteer-core": "^24.34.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
