--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@axe-core/playwright": "^4.11.1",
     "@sparticuz/chromium": "^143.0.0",
     "axe-core": "^4.11.0",
     "next": "14.2.21",
