--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@axe-core/playwright": "^4.11.1",
     "@sparticuz/chromium": "^143.0.0",
+    "@supabase/supabase-js": "^2.97.0",
     "axe-core": "^4.11.0",
     "next": "14.2.21",
     "playwright-core": "^1.58.2",
