--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "puppeteer-core": "^24.34.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "resend": "^6.6.0"
+    "resend": "^6.6.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
